; ModuleID = '/home/carl/AnghaBench/RetroArch/midi/drivers/extr_alsa_midi.c_alsa_midi_get_port.c'
source_filename = "/home/carl/AnghaBench/RetroArch/midi/drivers/extr_alsa_midi.c_alsa_midi_get_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32 }

@SND_SEQ_PORT_TYPE_MIDI_GENERIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*, i32, %struct.TYPE_3__*)* @alsa_midi_get_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @alsa_midi_get_port(i32* %0, i8* %1, i32 %2, %struct.TYPE_3__* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_3__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store %struct.TYPE_3__* %3, %struct.TYPE_3__** %9, align 8
  %16 = call i32 @snd_seq_client_info_alloca(i32** %10)
  %17 = call i32 @snd_seq_port_info_alloca(i32** %11)
  %18 = load i32*, i32** %10, align 8
  %19 = call i32 @snd_seq_client_info_set_client(i32* %18, i32 -1)
  br label %20

20:                                               ; preds = %70, %4
  %21 = load i32*, i32** %6, align 8
  %22 = load i32*, i32** %10, align 8
  %23 = call i64 @snd_seq_query_next_client(i32* %21, i32* %22)
  %24 = icmp eq i64 %23, 0
  br i1 %24, label %25, label %71

25:                                               ; preds = %20
  %26 = load i32*, i32** %10, align 8
  %27 = call i32 @snd_seq_client_info_get_client(i32* %26)
  store i32 %27, i32* %12, align 4
  %28 = load i32*, i32** %11, align 8
  %29 = load i32, i32* %12, align 4
  %30 = call i32 @snd_seq_port_info_set_client(i32* %28, i32 %29)
  %31 = load i32*, i32** %11, align 8
  %32 = call i32 @snd_seq_port_info_set_port(i32* %31, i32 -1)
  br label %33

33:                                               ; preds = %69, %25
  %34 = load i32*, i32** %6, align 8
  %35 = load i32*, i32** %11, align 8
  %36 = call i64 @snd_seq_query_next_port(i32* %34, i32* %35)
  %37 = icmp eq i64 %36, 0
  br i1 %37, label %38, label %70

38:                                               ; preds = %33
  %39 = load i32*, i32** %11, align 8
  %40 = call i32 @snd_seq_port_info_get_capability(i32* %39)
  store i32 %40, i32* %13, align 4
  %41 = load i32*, i32** %11, align 8
  %42 = call i32 @snd_seq_port_info_get_type(i32* %41)
  store i32 %42, i32* %14, align 4
  %43 = load i32, i32* %14, align 4
  %44 = load i32, i32* @SND_SEQ_PORT_TYPE_MIDI_GENERIC, align 4
  %45 = and i32 %43, %44
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %47, label %69

47:                                               ; preds = %38
  %48 = load i32, i32* %13, align 4
  %49 = load i32, i32* %8, align 4
  %50 = and i32 %48, %49
  %51 = load i32, i32* %8, align 4
  %52 = icmp eq i32 %50, %51
  br i1 %52, label %53, label %69

53:                                               ; preds = %47
  %54 = load i32*, i32** %11, align 8
  %55 = call i8* @snd_seq_port_info_get_name(i32* %54)
  store i8* %55, i8** %15, align 8
  %56 = load i8*, i8** %15, align 8
  %57 = load i8*, i8** %7, align 8
  %58 = call i64 @string_is_equal(i8* %56, i8* %57)
  %59 = icmp ne i64 %58, 0
  br i1 %59, label %60, label %68

60:                                               ; preds = %53
  %61 = load i32, i32* %12, align 4
  %62 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %63 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %62, i32 0, i32 0
  store i32 %61, i32* %63, align 4
  %64 = load i32*, i32** %11, align 8
  %65 = call i32 @snd_seq_port_info_get_port(i32* %64)
  %66 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %67 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %66, i32 0, i32 1
  store i32 %65, i32* %67, align 4
  store i32 1, i32* %5, align 4
  br label %72

68:                                               ; preds = %53
  br label %69

69:                                               ; preds = %68, %47, %38
  br label %33

70:                                               ; preds = %33
  br label %20

71:                                               ; preds = %20
  store i32 0, i32* %5, align 4
  br label %72

72:                                               ; preds = %71, %60
  %73 = load i32, i32* %5, align 4
  ret i32 %73
}

declare dso_local i32 @snd_seq_client_info_alloca(i32**) #1

declare dso_local i32 @snd_seq_port_info_alloca(i32**) #1

declare dso_local i32 @snd_seq_client_info_set_client(i32*, i32) #1

declare dso_local i64 @snd_seq_query_next_client(i32*, i32*) #1

declare dso_local i32 @snd_seq_client_info_get_client(i32*) #1

declare dso_local i32 @snd_seq_port_info_set_client(i32*, i32) #1

declare dso_local i32 @snd_seq_port_info_set_port(i32*, i32) #1

declare dso_local i64 @snd_seq_query_next_port(i32*, i32*) #1

declare dso_local i32 @snd_seq_port_info_get_capability(i32*) #1

declare dso_local i32 @snd_seq_port_info_get_type(i32*) #1

declare dso_local i8* @snd_seq_port_info_get_name(i32*) #1

declare dso_local i64 @string_is_equal(i8*, i8*) #1

declare dso_local i32 @snd_seq_port_info_get_port(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
